# aiotranslator

./: .gitignore  Cargo.toml  LICENSE  env_example  languages.csv  missing  readme.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: rust-clippy.yml
src/: detector.rs  error.rs  generator.rs  languages.rs  lib.rs  main.rs  model_register.rs
src/translators/: chainer.rs  chatbot.rs  context.rs  dev.rs  helpers.rs  mod.rs  tokens.rs  translator_initilized.rs  translator_structrue.rs  translator_structure.rs
src/translators/api/: baidu.rs  chatgpt.rs  deepl.rs  google.rs  libretranslate.rs  mod.rs  mymemory.rs  papago.rs  youdao.rs
src/translators/offline/: jparacrawl.rs  jparacrawlbig.rs  m2m100.rs  m2m100_12b.rs  m2m100_418m.rs  mod.rs  nllb.rs  sugoi.rs
src/translators/offline/ctranslate2/: mod.rs  model_management.rs  py.rs  tokenizer.rs  translator.py
src/translators/scrape/: baidu.rs  bing.rs  edgegpt.rs  google.rs  mod.rs  papago.rs  youdao.rs
