[package]
name = "translators"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
envy = "0.4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
async-trait = "0.1.68"
whatlang = { version = "0.16.2", optional = true }
lingua = { version = "1.4.0", optional = true }
futures = { version = "0.3.28", optional = true }
tokio = { version = "1.0", optional = true }
chatgpt_rs = { git = "https://github.com/JustFrederik/chatgpt_rs.git", rev = "5f60316", features = ["gpt3"], optional = true }
regex = { version = "1.8.1", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
select = { version = "0.6.0", optional = true }
csv = { version = "1.1", optional = true }
codegen = { version = "0.2.0", optional = true }
edge-gpt = { version = "0.3.3", optional = true }
hmac = { version = "0.12.1", optional = true }
md-5 = { version = "0.10.5", optional = true }
base64 = { version = "0.21.0", optional = true }
uuid = { version = "1.3.2", features = ["v4"], optional = true }
sentencepiece = { version = "0.11.1", optional = true }
model-manager = { git = "https://github.com/JustFrederik/model_manager.git", rev = "ab98303", optional = true }
rustyctranslate2 = { git = "https://github.com/JustFrederik/rustyctranslate2", rev = "94a745f", optional = true }
async-global-executor = "2.3.1"

[features]
default = ["whatlang-detector", "online", "retries", "fetch_languages", "generate"]

whatlang-detector = ["dep:whatlang"]
lingua-detector = ["dep:lingua"]
all-detectors = ["whatlang-detector", "lingua-detector"]

retries = ["dep:tokio", "dep:futures", "tokio?/full"]

#Google is always available
deepl = []
mymemory = []
chatgpt = ["dep:chatgpt_rs", "chatgpt_rs?/gpt3"]
libre = []
api = ["chatgpt", "deepl", "libre", "mymemory"]

papago-scrape = ["dep:hmac", "dep:md-5", "dep:base64", "dep:uuid", "uuid?/v4"]
google-scrape = []
youdao-scrape = []
edge-gpt-scrape = ["dep:edge-gpt"]
baidu-scrape = ["dep:serde_urlencoded"]
bing-scrape = ["dep:regex", "dep:serde_urlencoded"]
scraper = ["bing-scrape", "papago-scrape", "youdao-scrape", "baidu-scrape", "google-scrape", "edge-gpt-scrape"]

online = ["api", "scraper"]

offline_req = ["dep:sentencepiece", "dep:model-manager", "dep:rustyctranslate2"]
jparacrawl = ["offline_req"]
sugoi = ["offline_req", "dep:regex"]
m2m100 = ["offline_req"]

offline = ["jparacrawl", "sugoi", "m2m100"]

all-translators = ["online", "offline"]

fetch_languages = ["dep:select"]
generate = ["dep:codegen", "dep:csv"]

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }